; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/UserNotification/extr_KUNCUserNotifications.c_UNDReply_deallocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/UserNotification/extr_KUNCUserNotifications.c_UNDReply_deallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }

@IKO_NULL = common dso_local global i32 0, align 4
@IKOT_NONE = common dso_local global i32 0, align 4
@IP_NULL = common dso_local global i32 0, align 4
@LockCompatGroup = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UNDReply_deallocate(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = call i32 @UNDReply_lock(%struct.TYPE_6__* %4)
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @IP_VALID(i32 %9)
  %11 = call i32 @assert(i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @IKO_NULL, align 4
  %14 = load i32, i32* @IKOT_NONE, align 4
  %15 = call i32 @ipc_kobject_set(i32 %12, i32 %13, i32 %14)
  %16 = load i32, i32* @IP_NULL, align 4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %20 = call i32 @UNDReply_unlock(%struct.TYPE_6__* %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ipc_port_dealloc_kernel(i32 %21)
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = call i32 @lck_mtx_destroy(i32* %24, i32* @LockCompatGroup)
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %27 = call i32 @kfree(%struct.TYPE_6__* %26, i32 4)
  ret void
}

declare dso_local i32 @UNDReply_lock(%struct.TYPE_6__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @IP_VALID(i32) #1

declare dso_local i32 @ipc_kobject_set(i32, i32, i32) #1

declare dso_local i32 @UNDReply_unlock(%struct.TYPE_6__*) #1

declare dso_local i32 @ipc_port_dealloc_kernel(i32) #1

declare dso_local i32 @lck_mtx_destroy(i32*, i32*) #1

declare dso_local i32 @kfree(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
